deployments/kubernetes/staging/persistent/kafka/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.1.2
          ports:
            - name: internal
              containerPort: 9092
            - name: external
              containerPort: 29092
            - name: controller
              containerPort: 9093
          resources:
            requests:
              cpu: "50m"
              memory: "192Mi"
            limits:
              cpu: "200m"
              memory: "384Mi"
          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-storage
          persistentVolumeClaim:
            claimName: kafka-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: internal
      port: 9092
      targetPort: 9092
    - name: external
      port: 29092
      targetPort: 29092
    - name: controller
      port: 9093
      targetPort: 9093
