deployments/kubernetes/staging/persistent/kafka/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:3.9
          ports:
            - containerPort: 2181
          resources:
            requests:
              cpu: '50m'
              memory: '128Mi'
            limits:
              cpu: '100m'
              memory: '256Mi'
          volumeMounts:
            - name: zoo-storage
              mountPath: /bitnami/zookeeper
      volumes:
        - name: zoo-storage
          persistentVolumeClaim:
            claimName: zookeeper-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
