deployments/kubernetes/staging/persistent/kafka/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kafka-ui-storage
              mountPath: /data
            - name: kafka-ui-config-volume
              mountPath: /etc/kafkaui/dynamic_config.yaml
              subPath: dynamic_config.yaml
      volumes:
        - name: kafka-ui-storage
          persistentVolumeClaim:
            claimName: kafka-ui
        - name: kafka-ui-config-volume
          configMap:
            name: kafka-ui-config
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.tuannm.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
